--- a/chips-http.conf
+++ b/chips-http.conf
@@ -2,10 +2,10 @@ ServerName apache
 ErrorLog /usr/local/apache2/exportedlogs/apache/error.log
 CustomLog /usr/local/apache2/exportedlogs/apache/access.log common
 
-#ExpiresActive On
-#ExpiresDefault A604800
-#ExpiresByType application/x-javascript "access plus 10 hours"
-#ExpiresByType text/css "access plus 10 hours"
+ExpiresActive On
+ExpiresDefault A604800
+ExpiresByType application/x-javascript "access plus 10 hours"
+ExpiresByType text/css "access plus 10 hours"
 
 <IfModule mod_weblogic.c>
   WebLogicCluster wlserver1:7001,wlserver2:7001,wlserver3:7001,wlserver4:7001
@@ -16,7 +16,7 @@ CustomLog /usr/local/apache2/exportedlogs/apache/access.log common
   WLProxySSL ON
 </IfModule>
 
-<LocationMatch "(/chips/cff|/chips/cff/servlet/.+|/chips/cff.+|/chips/servlet/.+)$">
+<LocationMatch "(/chips/cff|/chips/cff/servlet/.+|/chips/cff.+|/chips/servlet/.+|/chips/utilities/.+|/chips-restService/.+|/chips-queuedRestService/.+)$">
   SetHandler weblogic-handler
 </LocationMatch>
 
