Add location for /consolehelp/ and disable WLProxySSL for help

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -17,7 +17,7 @@ ExpiresByType text/css "access plus 10 hours"
 </IfModule>
 
 <LocationMatch "(/chips/cff|/chips/cff/servlet/.+|/chips/cff.+|/chips/servlet/.+|/chips/utilities/.+|/chips-restService/.+|/chips-queuedRestService/.+)$">
-  SetHandler weblogic-handler
+  WLSRequest ON
 </LocationMatch>
 
 Listen 81
@@ -29,9 +29,13 @@ Listen 81
     WebLogicPort 7001
     ConnectTimeoutSecs 30
     WLTempDir /tmp
-    WLProxySSL ON
   </IfModule>
-  <LocationMatch ".*">
-    SetHandler weblogic-handler
+  <LocationMatch "^/console/*">
+    WLSRequest ON
+    WLProxySSL ON
+  </LocationMatch>
+  <LocationMatch "^/consolehelp/*">
+    WLSRequest ON
+    WLProxySSL OFF
   </LocationMatch>
 </VirtualHost>
