Add path for swadmin app

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -38,4 +38,8 @@ Listen 81
     WLSRequest ON
     WLProxySSL OFF
   </LocationMatch>
+  <LocationMatch "^/swadmin/*">
+    WLSRequest ON
+    WLProxySSL ON
+  </LocationMatch>
 </VirtualHost>
