Add log rotation

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -1,6 +1,6 @@
 ServerName apache
-ErrorLog /usr/local/apache2/exportedlogs/apache/error.log
-CustomLog /usr/local/apache2/exportedlogs/apache/access.log common
+ErrorLog "|bin/rotatelogs -n 7 /usr/local/apache2/exportedlogs/apache/error.log 86400"
+CustomLog "|bin/rotatelogs -n 7 /usr/local/apache2/exportedlogs/apache/access.log 86400" common
 
 ExpiresActive On
 ExpiresDefault A604800
@@ -22,8 +22,8 @@ ExpiresByType text/css "access plus 10 hours"
 
 Listen 81
 <VirtualHost *:81>
-  ErrorLog /usr/local/apache2/exportedlogs/apache/admin-error.log
-  CustomLog /usr/local/apache2/exportedlogs/apache/admin-access.log common
+  ErrorLog "|bin/rotatelogs -n 7 /usr/local/apache2/exportedlogs/apache/admin-error.log 86400"
+  CustomLog "|bin/rotatelogs -n 7 /usr/local/apache2/exportedlogs/apache/admin-access.log 86400" common
   <IfModule mod_weblogic.c>
     WebLogicHost wladmin
     WebLogicPort 7001
