Disable Keep Alive and use default value for MaxSkipTime

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -9,9 +9,9 @@ ExpiresByType text/css "access plus 10 hours"
 
 <IfModule mod_weblogic.c>
   WebLogicCluster wlserver1:7001,wlserver2:7001,wlserver3:7001,wlserver4:7001
-  MaxSkipTime 120
   WLSocketTimeoutSecs 20
   ConnectTimeoutSecs 30
+  KeepAliveEnabled OFF
   WLTempDir /tmp
   WLProxySSL ON
 </IfModule>
