Increase WLIOTimeoutSecs from 120 (default) to 300 secs

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -12,6 +12,7 @@ ExpiresByType text/css "access plus 10 hours"
   WLSocketTimeoutSecs 20
   ConnectTimeoutSecs 30
   KeepAliveEnabled OFF
+  WLIOTimeoutSecs 300
   WLTempDir /tmp
   WLProxySSL ON
 </IfModule>
