Further update to sso endpoint regexp

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -17,7 +17,7 @@ ExpiresByType text/css "access plus 10 hours"
   WLProxySSL ON
 </IfModule>
 
-<LocationMatch "(/chips/cff|/chips/cff/servlet/.+|/chips/cff.+|/chips/servlet/.+|/chips/utilities/.+|/chips-restService/.+|/chips-queuedRestService/.+|/saml2/.+|/sso.+)$">
+<LocationMatch "(/chips/cff|/chips/cff/servlet/.+|/chips/cff.+|/chips/servlet/.+|/chips/utilities/.+|/chips-restService/.+|/chips-queuedRestService/.+|/saml2/.+|/sso.*)$">
   WLSRequest ON
 </LocationMatch>
 
