Prevent browser caching of /sso and /saml2/ endpoints

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -17,8 +17,14 @@ ExpiresByType text/css "access plus 10 hours"
   WLProxySSL ON
 </IfModule>
 
-<LocationMatch "(/chips/cff|/chips/cff/servlet/.+|/chips/cff.+|/chips/servlet/.+|/chips/utilities/.+|/chips-restService/.+|/chips-queuedRestService/.+|/saml2/.+|/sso.*)$">
+<LocationMatch "(/chips/cff|/chips/cff/servlet/.+|/chips/cff.+|/chips/servlet/.+|/chips/utilities/.+|/chips-restService/.+|/chips-queuedRestService/.+)$">
   WLSRequest ON
+</LocationMatch>
+
+<LocationMatch "(/saml2/.+|/sso.*)$">
+  WLSRequest ON
+  Header Set Pragma "no-cache"
+  Header Set Cache-Control "max-age=0, no-store, no-cache, must-revalidate"
 </LocationMatch>
 
 Listen 81
