SUP-1129 Add Chips SSO servlet URI and remove seperate app SSO URI

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -21,7 +21,7 @@ ExpiresByType text/css "access plus 10 hours"
   WLSRequest ON
 </LocationMatch>
 
-<LocationMatch "(/saml2/.+|/sso.*)$">
+<LocationMatch "(/saml2/.+|/chips/sso.*)$">
   WLSRequest ON
   Header Set Pragma "no-cache"
   Header Set Cache-Control "max-age=0, no-store, no-cache, must-revalidate"
