Only cache javascript files for 10 hours

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -5,6 +5,7 @@ CustomLog "|bin/rotatelogs -t /usr/local/apache2/exportedlogs/apache/access.log 
 ExpiresActive On
 ExpiresDefault A604800
 ExpiresByType application/x-javascript "access plus 10 hours"
+ExpiresByType text/javascript "access plus 10 hours"
 ExpiresByType text/css "access plus 10 hours"
 
 <IfModule mod_weblogic.c>
