Add rconsole to LocationMatch for Weblogic admin server

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -38,7 +38,7 @@ Listen 81
     ConnectTimeoutSecs 30
     WLTempDir /tmp
   </IfModule>
-  <LocationMatch "^/console/*">
+  <LocationMatch "^/console/*|^rconsole/*">
     WLSRequest ON
     WLProxySSL ON
   </LocationMatch>
