--- a/chips-http.conf
+++ b/chips-http.conf
@@ -7,6 +7,7 @@ ExpiresDefault A604800
 ExpiresByType application/x-javascript "access plus 10 hours"
 ExpiresByType text/javascript "access plus 10 hours"
 ExpiresByType text/css "access plus 10 hours"
+ExpiresByType text/html "access plus 10 hours"
 
 <IfModule mod_weblogic.c>
   WebLogicCluster wlserver1:7001,wlserver2:7001,wlserver3:7001,wlserver4:7001
