Support using query param s=N to force session on wlserverN

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -51,3 +51,20 @@ Listen 81
     WLProxySSL ON
   </LocationMatch>
 </VirtualHost>
+
+<If "%{QUERY_STRING} =~ /^s=1$/">
+  WebLogicHost wlserver1
+  WebLogicPort 7001
+</If>
+<If "%{QUERY_STRING} =~ /^s=2$/">
+  WebLogicHost wlserver2
+  WebLogicPort 7001
+</If>
+<If "%{QUERY_STRING} =~ /^s=3$/">
+  WebLogicHost wlserver3
+  WebLogicPort 7001
+</If>
+<If "%{QUERY_STRING} =~ /^s=4$/">
+  WebLogicHost wlserver4
+  WebLogicPort 7001
+</If>
