Prevent caching of the admin console pages

--- a/chips-http.conf
+++ b/chips-http.conf
@@ -40,6 +40,8 @@ Listen 81
     WLTempDir /tmp
   </IfModule>
   <LocationMatch "^/console/*|^/rconsole/*">
+    Header Set Pragma "no-cache"
+    Header Set Cache-Control "max-age=0, no-store, no-cache, must-revalidate"
     WLSRequest ON
     WLProxySSL ON
   </LocationMatch>
